
1.0a - Initial stage: 1 New vehicles and tweaks

Volkswagen Type 166 Schwimmwagen:

	Specification:	 Amphibious Car(Boat on wheels) / Size - 2x2 / Mass - 910kg 

	Armament:		 MG34(100rnd) - 7.92x57mm Mauser, Automatic(1/6/15)
	
	Mobility:		 21c/s - 80km/h or 50mph IRL
	
	Carry Capacity:	 340kg
	
	Crew:			 (3) 1 driver, 1 sidecar gunner and 1 passenger
	
	Fuel:			 50 L total / 120 L per day consumption(5L per hour)
	
Tweaks:
-Increased fuel consumption for vehicles
*Enabled vehicle rename
*Reverted diagonal direction
*Disabled hidden vehicle(VK 16.02)
*Disabled suspected VVF features


1.0 - Initial stage: 4 New vehicles and 1 hidden

Zundapp KS 750 w sidecar:

	Specification:	 Motorcycle(w sidecar) / Size - 1x2 / Mass - 420kg 

	Armament:		 MG34(100rnd) - 7.92x57mm Mauser, Automatic(1/6/15)
	
	Mobility:		 25c/s - 95km/h or 59mph IRL
	
	Carry Capacity:	 160kg
	
	Crew:			 (3) 1 driver, 1 sidecar gunner and 1 passenger
	
	Fuel:			 12 L total / 72 L per day consumption(3L per hour)
	
Sd.Kfz.4(Maultier):

	Specification:	 Half-tracked Truck / Size - 2x4 / Mass - 6200kg 

	Armament:		 None
	
	Mobility:		 12c/s - 45km/h or 28mph IRL
	
	Carry Capacity:	 2200kg
	
	Crew:			 (12) 1 driver and 11 passenger
	
	Fuel:			 100 L total / 240 L per day consumption(10 per hour)
	
	Armor:			 10 / 10 / 10
	
	
Sd.Kfz.251(Hanomags):

	Specification:	 Armored Infantry Carrier / Size - 2x4 / Mass - 7200kg 

	Armament:		 MG42 100rnd x2(Front and Rear)
	
	Mobility:		 14c/s - 52.5km/h or 32.6mph IRL
	
	Carry Capacity:	 800kg
	
	Crew:			 (10) 1 driver, 2 gunner and 7 passenger
	
	Fuel:			 120 L total / 288 L per day consumption(12L per hour)
	
	Armor:			 13 / 13 / 13
	
Sd.Kfz.251/16(Flammpanzerwagen):

	Specification:	 Assault Carrier / Size - 2x4 / Mass - 7810kg 

	Armament:		 MG42 x2(100rnd 8mm Mauser Rifle Catridge - 1200rpm/automatic 1/8/18 - Front and Rear) + 2 Flammenwerfer(both side)
	
	Mobility:		 14c/s - 52.5km/h or 32.6mph IRL
	
	Carry Capacity:	 800kg
	