@@ -43,7 +43,7 @@
 		<vehicleCategory>Transport</vehicleCategory>
 		<vehicleType>Sea</vehicleType>
 		<statBases>
-			<ArmorRating_Blunt>120</ArmorRating_Blunt>
+			<ArmorRating_Blunt>65</ArmorRating_Blunt>
 			<ArmorRating_Sharp>5</ArmorRating_Sharp>
 			<Flammability>0.2</Flammability>
 			<MarketValue>3400</MarketValue>
@@ -479,7 +479,7 @@
 			<li Class="Vehicles.CompProperties_FueledTravel">	<!-- vehicle fuel tank -->
 				<fuelType>Chemfuel</fuelType>
 				<leakDef>Filth_Fuel</leakDef>
-				<fuelConsumptionRate>120</fuelConsumptionRate>
+				<fuelConsumptionRate>72</fuelConsumptionRate>
 				<fuelConsumptionWorldMultiplier>0.4</fuelConsumptionWorldMultiplier>
 				<fuelCapacity>50</fuelCapacity>
 			</li>
