@@ -43,8 +43,8 @@
 		<size>(2,4)</size>
 		<vehicleCategory>Combat</vehicleCategory>
 		<statBases>
-			<ArmorRating_Blunt>110</ArmorRating_Blunt>
-			<ArmorRating_Sharp>4</ArmorRating_Sharp>
+			<ArmorRating_Blunt>65</ArmorRating_Blunt>
+			<ArmorRating_Sharp>5</ArmorRating_Sharp>
 			<Flammability>0</Flammability>
 			<MarketValue>7200</MarketValue>
 		</statBases>
@@ -450,7 +450,7 @@
 			<li Class="Vehicles.CompProperties_FueledTravel">	<!-- vehicle fuel tank -->
 				<fuelType>Chemfuel</fuelType>
 				<leakDef>Filth_Fuel</leakDef>
-				<fuelConsumptionRate>288</fuelConsumptionRate>
+				<fuelConsumptionRate>144</fuelConsumptionRate>
 				<fuelConsumptionWorldMultiplier>0.4</fuelConsumptionWorldMultiplier>
 				<fuelCapacity>120</fuelCapacity>
 			</li>
