@@ -42,8 +42,8 @@
 		<vehicleCategory>Transport</vehicleCategory>
 		<nameable>true</nameable>
 		<statBases>
-			<ArmorRating_Blunt>110</ArmorRating_Blunt>
-			<ArmorRating_Sharp>4</ArmorRating_Sharp>
+			<ArmorRating_Blunt>65</ArmorRating_Blunt>
+			<ArmorRating_Sharp>5</ArmorRating_Sharp>
 			<Flammability>0</Flammability>
 			<MarketValue>4600</MarketValue>
 		</statBases>
@@ -327,7 +327,7 @@
 				<depth>External</depth>
 				<hitWeight>4</hitWeight>
 				<armor>
-					<ArmorRating_Blunt>2720</ArmorRating_Blunt>
+					<ArmorRating_Blunt>220</ArmorRating_Blunt>
 					<ArmorRating_Sharp>8</ArmorRating_Sharp>
 				</armor>
 			</li>
@@ -369,7 +369,7 @@
 			<li Class="Vehicles.CompProperties_FueledTravel">	<!-- vehicle fuel tank -->
 				<fuelType>Chemfuel</fuelType>
 				<leakDef>Filth_Fuel</leakDef>
-				<fuelConsumptionRate>240</fuelConsumptionRate>
+				<fuelConsumptionRate>120</fuelConsumptionRate>
 				<fuelConsumptionWorldMultiplier>0.45</fuelConsumptionWorldMultiplier>
 				<fuelCapacity>100</fuelCapacity>
 			</li>
